Added title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-architect
-title: Welcome to Weedon's homepage
+title: Welcome to Weedon's homepage.
 description: Sit a while and listen...
